; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/t/extr_..libquicly.c_quicly_determine_packet_number.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/t/extr_..libquicly.c_quicly_determine_packet_number.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @quicly_determine_packet_number(i64 %0, i64 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i64 %1, i64* %6, align 8
  store i64 %2, i64* %7, align 8
  %10 = load i64, i64* %6, align 8
  %11 = shl i64 1, %10
  store i64 %11, i64* %8, align 8
  %12 = load i64, i64* %7, align 8
  %13 = load i64, i64* %8, align 8
  %14 = sub i64 %13, 1
  %15 = xor i64 %14, -1
  %16 = and i64 %12, %15
  %17 = load i64, i64* %5, align 8
  %18 = or i64 %16, %17
  store i64 %18, i64* %9, align 8
  %19 = load i64, i64* %9, align 8
  %20 = load i64, i64* %8, align 8
  %21 = udiv i64 %20, 2
  %22 = add i64 %19, %21
  %23 = load i64, i64* %7, align 8
  %24 = icmp ule i64 %22, %23
  br i1 %24, label %25, label %29

25:                                               ; preds = %3
  %26 = load i64, i64* %9, align 8
  %27 = load i64, i64* %8, align 8
  %28 = add i64 %26, %27
  store i64 %28, i64* %4, align 8
  br label %46

29:                                               ; preds = %3
  %30 = load i64, i64* %9, align 8
  %31 = load i64, i64* %7, align 8
  %32 = load i64, i64* %8, align 8
  %33 = udiv i64 %32, 2
  %34 = add i64 %31, %33
  %35 = icmp ugt i64 %30, %34
  br i1 %35, label %36, label %44

36:                                               ; preds = %29
  %37 = load i64, i64* %9, align 8
  %38 = load i64, i64* %8, align 8
  %39 = icmp ugt i64 %37, %38
  br i1 %39, label %40, label %44

40:                                               ; preds = %36
  %41 = load i64, i64* %9, align 8
  %42 = load i64, i64* %8, align 8
  %43 = sub i64 %41, %42
  store i64 %43, i64* %4, align 8
  br label %46

44:                                               ; preds = %36, %29
  %45 = load i64, i64* %9, align 8
  store i64 %45, i64* %4, align 8
  br label %46

46:                                               ; preds = %44, %40, %25
  %47 = load i64, i64* %4, align 8
  ret i64 %47
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
